Attempted to fix comment 5 of issue 878. There remains the long string overflow issue, which is fine on IE & Firefox, but not solved on Webkit(Chrome and Safari) before CSS3 word-wrap is implemented.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -729,9 +729,14 @@ table#source-properties th {
 	padding: 0 5px;
 	font-weight: bold;
 }
-.detailsSource {
-  overflow: scroll;
+table#source-properties td {
+  width: 360px;
+  word-wrap: break-word;
 }
+.detailsSource {
+  overflow: hidden;
+}
+
 
 /* Source Mapping */
 
